--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,103 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# ==================== Python ====================
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# ==================== Database ====================
+*.db
+*.sqlite
+*.sqlite3
+treehole.db
+
+# ==================== Logs ====================
+logs/
+*.log
+*.log.*
+
+# ==================== Node / Frontend ====================
+# Node.js
+node_modules/
+package-lock.json
+yarn.lock
+
+# Vite
+dist/
+.cache/
+.vite/
+
+# ==================== Environment Files ====================
+# Environment variables should never be committed
+.env
+.env.local
+.env.*.local
+
+# ==================== OS Files ====================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+nul
+aux
+con
+prn
+
+# Linux
+*~
+.directory
